# ocr_translate-google

./: README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
ocr_translate_google/: __init__.py  plugin.py
tests/: conftest.py  settings.py  test_google.py
