[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "ocr_translate-google"
dynamic = ["version"] # read from ocr_translate/__init__.py
description = "Plugin to implement google translation for ocr_translate."
authors = [
    { name = "Davide Grassano" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["django", "translation"]
requires-python = ">=3.12"
# ocr_translate-google==0.2.1
# ├── django-ocr_translate [required: >=0.7.0,<1.0, installed: 0.7.0]
# │   ├── wheel [required: ~=0.45.1, installed: 0.45.1]
# │   ├── setuptools [required: ~=80.9.0, installed: 80.9.0]
# │   ├── numpy [required: ~=2.2.6, installed: 2.2.6]
# │   ├── Django [required: ~=5.2.4, installed: 5.2.4]
# │   │   ├── asgiref [required: >=3.8.1, installed: 3.9.1]
# │   │   ├── sqlparse [required: >=0.3.1, installed: 0.5.3]
# │   │   └── tzdata [required: Any, installed: 2025.2]
# │   ├── django-cors-headers [required: ~=4.7.0, installed: 4.7.0]
# │   │   ├── asgiref [required: >=3.6, installed: 3.9.1]
# │   │   └── Django [required: >=4.2, installed: 5.2.4]
# │   │       ├── asgiref [required: >=3.8.1, installed: 3.9.1]
# │   │       ├── sqlparse [required: >=0.3.1, installed: 0.5.3]
# │   │       └── tzdata [required: Any, installed: 2025.2]
# │   ├── pillow [required: ~=11.3.0, installed: 11.3.0]
# │   └── opencv-python-headless [required: ~=4.12.0.88, installed: 4.12.0.88]
# │       └── numpy [required: >=2,<2.3.0, installed: 2.2.6]
# └── googletrans [required: Any, installed: 4.0.2]
#     └── httpx [required: >=0.27.2, installed: 0.28.1]
#         ├── anyio [required: Any, installed: 4.9.0]
#         │   ├── idna [required: >=2.8, installed: 3.10]
#         │   └── sniffio [required: >=1.1, installed: 1.3.1]
#         ├── certifi [required: Any, installed: 2025.7.14]
#         ├── httpcore [required: ==1.*, installed: 1.0.9]
#         │   ├── certifi [required: Any, installed: 2025.7.14]
#         │   └── h11 [required: >=0.16, installed: 0.16.0]
#         └── idna [required: Any, installed: 3.10]
dependencies = [
    "django-ocr_translate>=0.7.0,<1.0",
    "googletrans~=4.0.2",
]

[project.urls]
Source = "https://github.com/crivella/ocr_translate-google"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-django",
]
pre-commit = [
    "pre-commit",
    "pylint",
    "pylint-pytest",
    "pylint-django",
]
release = [
    "flit",
]

[project.entry-points."ocr_translate.tsl_data"]
"google_translate.online" = "ocr_translate_google:tsl_model_data"
[project.entry-points."ocr_translate.tsl_models"]
"google_translate.online" = "ocr_translate_google.plugin:GoogleTranslateModel"

[tool.flit.module]
name = "ocr_translate_google"

[tool.flit.sdist]
exclude = [
    ".gitignore", ".github", ".pre-commit-config.yaml",
    "tests/", "tests/*",
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "settings"
log_cli = true
pythonpath = ["./tests"]

[tool.pylint.main]
load-plugins = [
    "pylint_pytest"
]

[tool.pylint.messages_control]
disable = [
    "logging-fstring-interpolation",
    "global-statement",
    "broad-exception-caught",
    "too-few-public-methods",
]


[tool.pylint.format]
max-line-length = 120
good-names = [
    "_",

]
